@@ -1,34 +1,34 @@
 package edu.kit.datamanager.repo.util;
 
 import edu.kit.datamanager.exceptions.UnsupportedMediaTypeException;
-import edu.kit.datamanager.repo.util.validators.IValidator;
-import lombok.extern.java.Log;
+import edu.kit.datamanager.repo.util.validators.IIdentifierValidator;
 import org.datacite.schema.kernel_4.RelatedIdentifierType;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.io.BufferedReader;
-import java.io.InputStream;
-import java.io.InputStreamReader;
+import java.io.*;
+import java.lang.reflect.InvocationTargetException;
 import java.util.*;
+import java.util.jar.JarEntry;
+import java.util.jar.JarFile;
 import java.util.stream.Collectors;
 
 public class ValidatorUtil {
     private static final Logger LOGGER = LoggerFactory.getLogger(ValidatorUtil.class);
     private static final ValidatorUtil soleInstance = new ValidatorUtil();
 
-    private static final Map<RelatedIdentifierType, IValidator> validators;
+    private static final Map<RelatedIdentifierType, IIdentifierValidator> validators;
 
     static {
-        Map<RelatedIdentifierType, IValidator> validators1 = new HashMap<>();
+        Map<RelatedIdentifierType, IIdentifierValidator> validators1 = new HashMap<>();
         Set<Class> classes = findAllClassesUsingClassLoader("edu.kit.datamanager.repo.util.validators.impl");
         for (Class i: classes) {
             try {
-                IValidator j = (IValidator) i.newInstance();
+                IIdentifierValidator j = (IIdentifierValidator) i.getDeclaredConstructor().newInstance();
                 validators1.put(j.supportedType(), j);
                 LOGGER.debug(j.supportedType().toString());
-            } catch (InstantiationException | IllegalAccessException | ClassCastException e) {
-                e.printStackTrace();
+            } catch (InstantiationException | IllegalAccessException | ClassCastException | InvocationTargetException | NoSuchMethodException e) {
+                LOGGER.error(e.toString());
             }
         }
         validators = validators1;
@@ -38,20 +38,19 @@ public class ValidatorUtil {
         // enforces singularity
     }
 
-    public static ValidatorUtil soleInstance() {
+    public static ValidatorUtil getSingleton() {
         return soleInstance;
     }
 
     public List<RelatedIdentifierType> getAllAvailableValidatorTypes() {
-        Map<RelatedIdentifierType, IValidator> map = validators;
+        System.out.println("getAllAvailableValidatorTypes");
         List<RelatedIdentifierType> result = new ArrayList<>();
-        for (Map.Entry entry : map.entrySet()) {
-            result.add((RelatedIdentifierType) entry.getKey());
-        }
+        validators.forEach((key, value) -> result.add(key));
         return result;
     }
 
     public boolean isValid(String input, RelatedIdentifierType type){
+        System.out.println("isValid - string type");
         if (validators.containsKey(type)) {
             if (validators.get(type).isValid(input, type)) LOGGER.info("Valid input and valid input type!");
             return true;
@@ -62,7 +61,8 @@ public class ValidatorUtil {
     }
 
     public boolean isValid(String input, String type) {
-        for (Map.Entry<RelatedIdentifierType, IValidator> entry : validators.entrySet()) {
+        System.out.println("isValid - string string");
+        for (Map.Entry<RelatedIdentifierType, IIdentifierValidator> entry : validators.entrySet()) {
             if (entry.getKey().toString().equals(type)) {
                 if (entry.getValue().isValid(input)) return true;
             }
@@ -73,7 +73,7 @@ public class ValidatorUtil {
     private static Set<Class> findAllClassesUsingClassLoader(String packageName) {
         InputStream stream = ClassLoader.getSystemClassLoader()
                 .getResourceAsStream(packageName.replaceAll("[.]", "/"));
-        System.out.println(stream);
+        System.out.println(new BufferedReader(new InputStreamReader(IIdentifierValidator.class.getClassLoader().getResourceAsStream(packageName.replaceAll("[.]", "/")))).lines().toList().toString());
         BufferedReader reader = new BufferedReader(new InputStreamReader(stream));
         return reader.lines()
                 .filter(line -> line.endsWith(".class"))
@@ -83,8 +83,7 @@ public class ValidatorUtil {
 
     private static Class getClass(String className, String packageName) {
         try {
-            return Class.forName(packageName + "."
-                    + className.substring(0, className.lastIndexOf('.')));
+            return Class.forName(packageName + "." + className.substring(0, className.lastIndexOf('.')));
         } catch (ClassNotFoundException e) {
         }
         return null;
